@startuml strategyMONE
!theme plain
skinparam linetype ortho

class RouteFacade {
    + estimateCost(routeProps: RouteProps, priceSnapshot: PriceSnapshot, energy: VehicleEnergySource): number | null
    - canonicalizeConsumption(value?, unit?): { value: number; unit: ConsumptionUnit } | null
    - resolveEnergySource(options: RouteRequestOptions): VehicleEnergySource | undefined
}

class CostEstimatorDecorator {
    - priceSnapshot: PriceSnapshot
    + getCost(): number
}

class Route {
    + getDistance(): number
    + getConsumptionValue(): number | null
    + getConsumptionUnit(): ConsumptionUnit | null
}

class PriceSnapshot {
    + currency: string
    + gasolinePerLiter?: number
    + dieselPerLiter?: number
    + electricityPerKwh?: number
}

enum VehicleEnergySource {
    gasoline
    diesel
    electric
}

RouteFacade --> Route : usa datos básicos de la ruta
RouteFacade --> PriceSnapshot : consulta precios energéticos
RouteFacade --> VehicleEnergySource : decide fórmula según energía
RouteFacade --> CostEstimatorDecorator : crea decorador cuando hay snapshot
CostEstimatorDecorator --> PriceSnapshot

note bottom of RouteFacade
  La estimación de costes se resuelve con condicionales sobre VehicleEnergySource
  dentro de RouteFacade. No existen objetos Strategy desacoplados en el código,
  por lo que el patrón Strategy no está implementado como clases intercambiables.
  (src/domain/service/RouteFacade.ts)
end note

@enduml
